plugins {
  id 'java-library'
  id 'maven-publish'
//  id 'io.codearte.nexus-staging' version '0.30.0'
}

ext {
  globalVersion = file('version.txt').text
}

allprojects {
  group   = 'org.pageseeder.flint'
  version = "$globalVersion"

  apply plugin: 'java-library'
  apply from: "$rootDir/gradle/publish-mavencentral.gradle"

  sourceCompatibility = JavaVersion.VERSION_11
  targetCompatibility = JavaVersion.VERSION_11

  repositories {
    mavenCentral {
      url = uri("https://maven-central.storage.googleapis.com/maven2")
    }
    maven { url 'https://s01.oss.sonatype.org/content/groups/public/' }
  }

  jar {
    manifest {
      attributes 'Implementation-Vendor':  'Allette Systems',
                 'Implementation-Title':   "$title",
                 'Implementation-Version': "$globalVersion"
    }
  }
}

dependencies {

  implementation (
    'org.slf4j:slf4j-api:1.7.36',
    'org.pageseeder.xmlwriter:pso-xmlwriter:1.0.2'
  )

  // runtime
  runtimeOnly (
    'net.sf.saxon:Saxon-HE:10.8'
  )

  testImplementation (
    'junit:junit:4.13.2',
    'org.slf4j:slf4j-simple:1.7.36'
  )

}

wrapper {
  gradleVersion = '7.0'
  distributionType = Wrapper.DistributionType.ALL
}